New language changes
Resolves #194.

--- a/public/components/facet/facet.pug
+++ b/public/components/facet/facet.pug
@@ -1,6 +1,8 @@
 .form-group    
-  label {{label}} 
-    span.text-muted(ng-show="subgroup") {{subgroup}} 
+  h6(ng-if="label !== 'DBITI Employments & Identifiers'", style="font-weight: bold") {{ label }} 
+    span.text-muted(ng-show="subgroup") {{subgroup}}
+  h6(ng-if="label === 'DBITI Employments & Identifiers'", style="font-weight: bold; font-style: italic; display: inline") DBITI 
+  h6(ng-if="label === 'DBITI Employments & Identifiers'", style="font-weight: bold; font-style: normal; display: inline") Employments & Identifiers
 
   .facet-wrapper
     
