--- a/public/components/search-field/free-search.pug
+++ b/public/components/search-field/free-search.pug
@@ -1,5 +1,5 @@
 .form-group
-    label Word search in the entries
+    label Free word search
     div
         div.free-search-input(ng-repeat="term in freeSearchModel.terms track by $index")
             input.input-field.input-sm.form-control(
