--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -132,7 +132,8 @@
 
           .col-lg-12.col-md-4.col-sm-6(ng-show="entry.pursuits.length") 
             .panel.panel-default
-              .panel-heading DBITI Employments & Identifiers
+              .panel-heading.italic(style="display: inline-block") DBITI 
+              .panel-heading(style="display: inline-block") Employments & Identifiers
               ul.list-group
                 li.list-group-item(ng-repeat="e in entry.pursuits") 
                   a(ng-click="search({pursuits:e.pursuit})",
