--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -13,7 +13,7 @@
           a.pull-right(ng-click="clear()") Clear all
 
         .form-group
-          label Traveler names
+          label Traveler name
           input.input-sm.form-control(
             type="text", 
             ng-model="query.fullName",
@@ -49,7 +49,8 @@
             typeahead-on-select="search()")
 
         .form-group
-          label DBITI Employments & Identifiers
+          label(style="display: inline-block; font-style: italic") DBITI 
+          label(style="display: inline-block") Employments & Identifiers
           input.input-sm.form-control(
             type="text", 
             ng-model="query.pursuits",
