--- a/public/components/entry-list/entry-list.pug
+++ b/public/components/entry-list/entry-list.pug
@@ -6,7 +6,7 @@
       button.btn.btn-default.btn-xs.list-option(type="button", ng-click="deselectAllEntries()") deselect all
 
     div.btn-group.add-to-list-btn.list-option
-      button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
+      button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown", ng-if="currentUser")
         span {{ isSavedListView ? 'copy' : 'add selected entries to list' }}
         span.caret
       ul.dropdown-menu
@@ -64,7 +64,7 @@
           a(ng-click="setEntriesPerPage(0)", ng-class="{ 'bg-info' : entriesPerPage === 0 }") all entries
 
     div.btn-group
-      button#export-button.btn.btn-default.btn-xs.pull-right(data-loading-text="loading...", ng-click="export()", ng-disabled="!entries.length")
+      button#export-button.btn.btn-default.btn-xs.pull-right(data-loading-text="loading...", ng-click="export()", ng-disabled="!entries.length", ng-if="currentUser")
         i.fa.fa-download.margin-right
         | export results
 
