--- a/public/app.css
+++ b/public/app.css
@@ -883,7 +883,7 @@ ul.list-group.entry-facet > li .controls {
 }
 
 .free-search-input {
-  margin-top: 1em;
+  margin-top: .5em;
   margin-bottom: .5em;
 }
 
