Restored travel date's label

--- a/public/components/search-field/date-search.pug
+++ b/public/components/search-field/date-search.pug
@@ -1,5 +1,6 @@
 .form-group
- 
+    label {{title}}
+    
     input.input-sm.form-control.margin-top(
         type="text", 
         ng-model="dateModel.date.query.startYear",
