--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -285,13 +285,13 @@
                       h4 {{ e.entry.fullName }}
                       p {{ e.entry.biography.slice(0, 100) }}...
 
-          .col-lg-12.col-md-4.col-sm-6(ng-show="entry.consolidated_notes.length")
+          .col-lg-12.col-md-4.col-sm-6(ng-show="entry.sources.length")
             .panel.panel-default
               .panel-heading Sources
               ul.list-group
-                li.list-group-item(ng-repeat="e in entry.consolidated_notes") 
-                  a(ng-click="search({consolidated_notes:e})",
-                    ng-bind-html="highlighted('consolidated_notes', e)"
+                li.list-group-item(ng-repeat="e in entry.sources") 
+                  a(ng-click="search({sources: e.abbrev})",
+                    ng-bind-html="highlighted('sources', e.abbrev)"
                   ) 
           
           .col-lg-12.col-md-4.col-sm-6
