--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -296,7 +296,7 @@
           
           .col-lg-12.col-md-4.col-sm-6
             div.btn-group.add-to-list-btn.pull-left
-              button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
+              button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown", ng-if="currentUser")
                 span Add to List
                 span.caret
               ul.dropdown-menu
