fix loading race case by passing scope.searching to facets

--- a/public/explore/explore.pug
+++ b/public/explore/explore.pug
@@ -53,7 +53,8 @@
                       field="{{dimension.field}}",
                       suggestion='{{dimension.suggestion}}',
                       data-query='query'
-                      data-rawuniques='uniques[dimension.suggestion]')
+                      data-rawuniques='uniques[dimension.suggestion]'
+                      data-searching='searching')
                   div(ng-switch-when="number")
                     .form-group    
                       label {{dimension.label}} 
