--- a/public/index.pug
+++ b/public/index.pug
@@ -21,23 +21,23 @@ html(lang="en")
           a.navbar-brand(href="#/") The Grand Tour Explorer
         .collapse.navbar-collapse
           ul.nav.navbar-nav
-            li
-              a(ui-sref="about") About
+            //- li
+            //-   a(ui-sref="about") About
             li
               a(ui-sref="search") Search
             li
               a(ui-sref="explore") Explore 
-                sup (beta)
-            li(ng-if="currentUser")
-              a(ui-sref="lists") Saved Lists 
-                sup (beta)
             li
               a(ui-sref="visualizations") View
-                sup (beta)
+            li
+              a(href="Grand Tour Explorer Data.zip" download) Download
                               
           ul.nav.navbar-nav.navbar-right(ng-show="currentUser")
+            
             li(ng-show="currentUser.role=='admin'")
               a(ui-sref="admin") Manage
+            li(ng-if="currentUser")
+                a(ui-sref="lists") Saved Lists 
             li
               a {{currentUser.fullName || currentUser.username}}
             a.btn.btn-default.btn-sm.navbar-btn.navbar-right(type="button", ng-click="logout()")
