--- a/public/components/search-field/free-search.pug
+++ b/public/components/search-field/free-search.pug
@@ -31,7 +31,7 @@
 
             hr
 
-    a.small.add-word(ng-click="freeSearchModel.terms.push({ value: '', beginning: true, end: true })") add word
+    a.small.add-word(ng-click="freeSearchModel.terms.push({ value: '', beginning: true, end: true })" style="color: #80b8da") add word
     
     .clearfix
     
