--- a/public/main/main.pug
+++ b/public/main/main.pug
@@ -4,7 +4,7 @@
       h1 Grand Tour Explorer 
         sup.small beta
         .small Explore the journeys and the lives of British and Irish travelers to eighteenth-century Italy
-      button.btn.btn-lg.btn-success(ui-sref="search") Start exploring 
+      button.btn.btn-lg.btn-success.btn-lavender(ui-sref="search") Start exploring 
        i.fa.fa-angle-right
 
 .container.main-view
