--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -10,7 +10,7 @@
       form
         
         .form-group.clearfix
-          a.pull-right(ng-click="clear()") Clear all
+          a.pull-right(ng-click="clear()" style="color: #80b8da") Clear all
 
         .form-group
           label Traveler name
