--- a/public/app.css
+++ b/public/app.css
@@ -252,6 +252,31 @@ input[type=checkbox], input[type=radio] {
   border-radius: 2px;
 }
 
+.btn-lavender {
+  background-color: #A47FC8;
+  border-color: #643F88;
+}
+
+.btn-success {
+  background-color: #6DDA8B !important;
+  border-color: #4DBA6B !important;
+}
+
+.btn-warning {
+  background-color: #D79377;
+  border-color: #B77357;
+}
+
+.btn-danger {
+  background-color: #AB7879 !important;
+  border-color: #8B5859 !important;
+}
+
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+  background-color: #80b8da !important;
+  border-color: #70a8ca !important;
+}
+
 .navbar-default .navbar-brand {
   font-family: 'Poly', serif;
   color: #222;
@@ -290,7 +315,7 @@ sup {
 }
 
 .panel a {
-  color: #227AB9;
+  color: #80b8da;
 }
 
 .panel a:hover {
@@ -340,6 +365,14 @@ sup {
 
 .list-group-item {
   border: 1px solid #eee;
+}
+
+.list-group-mine .list-group-item:hover {
+  background-color: hsl(203, 20%, 80%);
+}
+
+.myActive {
+  background-color: #80b8da;
 }
 
 .panel.panel-nested {
@@ -587,7 +620,7 @@ hr {
   outline: 0;
 }
 
-#mytooltip{border:1px solid #e0e0e0;padding:5px 4px;background-color:"#3d424f";color:#fff;position:absolute;font-family:"Arial";font-size:10px;max-width:175px}.elastic-list{margin-top:25px;padding:2px;background:#f0;font-family:"Arial";font-size:12px;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box}.elastic-list-dimension-header{font-size:12px;font-weight:bold;float:left;border:1px solid #fff;color:#f0f0f0;background-color:#333;padding:4px 0 0 5px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.elastic-list-dimension{float:left;border:none;overflow-y:auto;overflow-x:hidden;color:#444}.elastic-list-dimension-item{position:relative;border:1px solid #fff;background-color:#a5a5a5;font-size:11px;font-family:"Arial"}.elastic-list-dimension-item p{margin:4px 0 0 5px;float:left;display:inline}.elastic-list-dimension-item p.key{width:70%}.elastic-list-dimension-item p.value{float:right;margin-right:22px}.elastic-list-dimension-item-hover{background-color:#d3d3d3}.elastic-list-dimension-item-hover p{font-weight:bold}#filtering{border-top:1px dotted #000;font-size:12px;font-weight:bold;margin-right:25px;height:50px}#filtering .elastic-list-filters{padding-top:5px;font-weight:bold;margin:0;height:25px;color:#222}#filtering .elastic-list-filters p{margin:0}#filtering .elastic-list-filters span{color:#0cf}.filter{background-color:#0cf}.filter-item{float:left}.results-title{font-family:"Arial";font-weight:bold;margin:0;font-size:12px}#results{font-family:"Arial";font-size:11px;height:200px;overflow-y:auto;border-top:1px solid #909090;background-color:#f0f0f0;padding:0 5px}#results p{border-bottom:1px solid #fff}.price-motivation{font-style:italic;color:#808080}.post-info-social ul{list-style:none;margin:0;padding:0}.post-info-social span.links{margin-right:30px}.post-info-social li{float:left;width:16px;height:36px;padding-left:3px}.post-info-social a{color:#000;text-decoration:none;outline-style:none;font-weight:bold}.post-info-social img{float:left;margin:10px 24px 20px 0}.github{margin-right:35px}
+#mytooltip{border:1px solid #e0e0e0;padding:5px 4px;background-color:"#3d424f";color:#fff;position:absolute;font-family:"Arial";font-size:10px;max-width:175px}.elastic-list{margin-top:25px;padding:2px;background:#f0;font-family:"Arial";font-size:12px;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box}.elastic-list-dimension-header{font-size:12px;font-weight:bold;float:left;border:1px solid #fff;color:#f0f0f0;background-color:#333;padding:4px 0 0 5px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.elastic-list-dimension{float:left;border:none;overflow-y:auto;overflow-x:hidden;color:#444}.elastic-list-dimension-item{position:relative;border:1px solid #fff;background-color:#a5a5a5;font-size:11px;font-family:"Arial"}.elastic-list-dimension-item p{margin:4px 0 0 5px;float:left;display:inline}.elastic-list-dimension-item p.key{width:70%}.elastic-list-dimension-item p.value{float:right;margin-right:22px}.elastic-list-dimension-item-hover{background-color:#d3d3d3}.elastic-list-dimension-item-hover p{font-weight:bold}#filtering{border-top:1px dotted #000;font-size:12px;font-weight:bold;margin-right:25px;height:50px}#filtering .elastic-list-filters{padding-top:5px;font-weight:bold;margin:0;height:25px;color:#222}#filtering .elastic-list-filters p{margin:0}#filtering .elastic-list-filters span{color:#80b8da}.filter{background-color:#80b8da}.filter-item{float:left}.results-title{font-family:"Arial";font-weight:bold;margin:0;font-size:12px}#results{font-family:"Arial";font-size:11px;height:200px;overflow-y:auto;border-top:1px solid #909090;background-color:#f0f0f0;padding:0 5px}#results p{border-bottom:1px solid #fff}.price-motivation{font-style:italic;color:#808080}.post-info-social ul{list-style:none;margin:0;padding:0}.post-info-social span.links{margin-right:30px}.post-info-social li{float:left;width:16px;height:36px;padding-left:3px}.post-info-social a{color:#000;text-decoration:none;outline-style:none;font-weight:bold}.post-info-social img{float:left;margin:10px 24px 20px 0}.github{margin-right:35px}
 
 .date-query-type {
   font-weight: 400;
@@ -1048,7 +1081,7 @@ div.tool_tip {
 }
 
 .viz-btn-group button:first-child {
-  background-color: #dddddd; /*Colors only temporary for demo*/
+  background-color: #dddddd;
   color: black;
   border-top-left-radius: 2px;
   border-bottom-left-radius: 2px;
