--- a/public/explore/explore.pug
+++ b/public/explore/explore.pug
@@ -34,7 +34,7 @@
             .row
               .col-lg-3(ng-repeat='dimension in activeDimensions')
                 div(ng-mouseover="tooltip = dimension.field", style="float: right; position: relative; right: 7px; cursor: pointer;")
-                    span(ng-mouseover="tooltip = dimension.field", ng-mouseleave="(tooltip == dimension.field) && (tooltip = null)", style="color: #227AB9; font-weight: bold") ?
+                    span(ng-mouseover="tooltip = dimension.field", ng-mouseleave="(tooltip == dimension.field) && (tooltip = null)", style="color: #80b8da; font-weight: bold") ?
                     div.mentioned-names-popup(
                           ng-mouseleave="(tooltip == dimension.field) && (tooltip = null)"
                           ng-style="{'margin-left': '15px', 'margin-top': '-30px', display: 'block', opacity: tooltip == dimension.field ? '1': '0', 'z-index': tooltip == dimension.field ? 99: -1, clear: both}"
