--- a/public/lists/lists.pug
+++ b/public/lists/lists.pug
@@ -12,10 +12,10 @@
     
     .row
         .col-lg-3.border-right
-            .list-group
+            .list-group.list-group-mine
                 .list-group-item.list-group-item-info(ng-show="sharedListModel.listsLoading") Loading lists...
                 .list-group-item.list-group-item-warning(ng-show="sharedListModel.myLists && !sharedListModel.myLists.length") No lists
-                a.list-group-item(ng-repeat="list in sharedListModel.myLists", ng-click="selectList(list)", ng-class="{ active: list === viewModel.selectedList }")
+                a.list-group-item(ng-repeat="list in sharedListModel.myLists", ng-click="selectList(list)", ng-class="{ 'myActive': list === viewModel.selectedList }")
                     h4.list-group-item-heading {{ list.name }}
                     p.list-group-item-text {{ list.entryIDs.length }} {{ list.entryIDs.length === 1 ? 'entry' : 'entries' }}
                 .list-group-item
