--- a/public/main/main.pug
+++ b/public/main/main.pug
@@ -4,7 +4,7 @@
       h1 Grand Tour Explorer 
         sup.small beta
         .small Explore the journeys and the lives of British and Irish travelers to eighteenth-century Italy
-      button.btn.btn-lg.btn-success(ui-sref="search") Start exploring 
+      button.btn.btn-lg.btn-success.btn-lavender(ui-sref="search") Start exploring 
        i.fa.fa-angle-right
 
 .container.main-view
@@ -20,8 +20,7 @@
         em Paul Mellon Centre for Studies in British Art 
         | by 
         em Yale University Press, 
-        | 1997). It transforms this text into a research tool that facilitates multidimensional searching and browsing of the entries in Ingamells’ Dictionary; the organization of this information into structured and usable data; and the analysis and visualization of this data. 
-        a(ui-sref="about") Learn more...
+        | 1997). It transforms this text into a research tool that facilitates multidimensional searching and browsing of the entries in Ingamells’ Dictionary; the organization of this information into structured and usable data; and the analysis and visualization of this data.
 
 
       p.text-serif The tool is still under construction; private beta version currently being tested with the support of Malcolm Baker, John Brewer, Melissa Calaresu, Jeffrey Collins, Paul Davis, Christopher Johns, Simon Macdonald, Carole Paul, Sophus Reinert, Catherine Sama, Rosemary Sweet.
