--- a/public/app.css
+++ b/public/app.css
@@ -1049,8 +1049,8 @@ div.tool_tip {
   position: absolute;			
   text-align: center;			
   display: inline-block;
-  margin-left: 20px;
-  margin-bottom: 30px;
+  margin-left: 10px;
+  margin-bottom: 15px;
   padding: 5px;				
   font: 13px 'Open Sans', sans-serif;		
   background: white;	
@@ -1072,32 +1072,31 @@ div.tool_tip {
   display: inline-block;
 }
 
-.viz-btn-group button {
+.viz-btn-group > div {
   border: 0px;
   background-color: #eeeeee;
-  padding: 9px 20px;
+  padding: 8px 25px 0px 9px;
   font-size: 15px;
   display: inline-block;
 }
 
-.viz-btn-group button:first-child {
+.viz-btn-group button {
+  border: 0px;
+}
+
+.viz-btn-group > div:first-child {
   background-color: #dddddd;
   color: black;
   border-top-left-radius: 2px;
   border-bottom-left-radius: 2px;
 }
 
-.viz-btn-group button:last-child {
+.viz-btn-group > div:last-child {
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
 }
 
-.viz-btn-group button:hover {
-  background-color: #dddddd;
-  color: black
-}
-
-.viz-btn-group button:active {
+.viz-btn-group > div:hover {
   background-color: #dddddd;
   color: black
 }
