--- a/public/index.pug
+++ b/public/index.pug
@@ -37,7 +37,7 @@ html(lang="en")
             li(ng-show="currentUser.role=='admin'")
               a(ui-sref="admin") Manage
             li
-              a(href="https://forms.gle/iywimg8HHe4hH1xS8") Report an issue
+              a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
             li(ng-if="currentUser")
                 a(ui-sref="lists") Saved Lists 
             li
@@ -48,7 +48,7 @@ html(lang="en")
 
           ul.nav.navbar-nav.navbar-right(ng-show="!currentUser")
             li
-              a(href="https://forms.gle/iywimg8HHe4hH1xS8") Report an issue
+              a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
             li
               a(ui-sref="login") Login            
     ui-view
