--- a/public/index.pug
+++ b/public/index.pug
@@ -28,7 +28,7 @@ html(lang="en")
             li
               a(ui-sref="explore") Explore 
             li
-              a(ui-sref="visualizations") View
+              a(ui-sref="visualizations") Visualize
             li
               a(href="Grand Tour Explorer Data.zip" download) Download
                               
