--- a/public/lists/lists.pug
+++ b/public/lists/lists.pug
@@ -38,6 +38,7 @@
                 entries="viewModel.selectedListEntries",
                 export="export()",
                 is-saved-list-view="true",
+                is-shared-list="viewModel.selectedList == viewModel.sharedList",
                 remove-selected-entries-from-list="removeSelectedEntriesFromList()",
                 duplicate-list="duplicateList(name)",
                 delete-list="deleteList()",
