responsive menu (mobile)

--- a/public/index.pug
+++ b/public/index.pug
@@ -19,7 +19,7 @@ html(lang="en")
       .container
         .navbar-header
           a.navbar-brand(href="#/") The Grand Tour Explorer
-        .collapse.navbar-collapse
+        .navbar-collapse
           ul.nav.navbar-nav
             //- li
             //-   a(ui-sref="about") About
