--- a/public/app.css
+++ b/public/app.css
@@ -1065,6 +1065,28 @@ div.tool_tip {
   min-width: 150px;
 }
 
+.hover-item {
+  cursor: pointer;
+  color: #d6bc73;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block; 
+  position: relative;
+  z-index: 1;
+}
+
+.hover-item:link {
+  color: #d0b67d;
+}
+
+.hover-item:hover {
+  color: #d0b67d;
+}
+
+.hover-item:active {
+  color: #d0b67d;
+}
+
 .viz-btn-group {
   border: 2px solid #dddddd;
   border-radius: 4px;
