--- a/public/explore/explore.pug
+++ b/public/explore/explore.pug
@@ -43,7 +43,8 @@
                         div(ng-if="dimension.label === 'DBITI Employments & Identifiers'" style="margin: 10px 0px")
                           h4(style="font-style: italic; display: inline") DBITI 
                           h4(style="font-style: normal; display: inline") Employments & Identifiers
-                        p {{ dimension.description }}
+                        p(style="display: inline") {{ dimension.description }}
+                        span.hover-item Learn more...
                 div(ng-switch="dimension.type")
                   div(ng-switch-when="facet",
                       facet="",
