--- a/public/main/main.pug
+++ b/public/main/main.pug
@@ -2,9 +2,9 @@
   .header
     .container
       h1 Grand Tour Explorer 
-        sup.small beta
+        .small(style="display: inline; font-size: 24px; color: #bbb") Created by Giovanna Ceserani and Giorgio Caviglia
         .small Explore the journeys and the lives of British and Irish travelers to eighteenth-century Italy
-      button.btn.btn-lg.btn-success.btn-lavender(ui-sref="search") Start exploring 
+      button.btn.btn-lg.btn-lavender(ui-sref="search") Start exploring 
        i.fa.fa-angle-right
 
 .container.main-view
@@ -12,20 +12,24 @@
   .row
     .col-lg-12
 
-      p.text-serif A digital project created by Giovanna Ceserani and Giorgio Caviglia at CESTA Stanford University
+      p.text-serif A digital tool created and developed by Giovanna Ceserani and Giorgio Caviglia at CESTA (the Center for Spatial and Textual Analysis at Stanford University), with development contributions by Cody Leff, Ashwin Ramaswami and Ryan Tan.
       
-      h3 The Grand Tour Explorer is a digital transformation of John Ingamells’ 
-        em A Dictionary of British and Irish Travellers in Italy 1701-1800 
-        | (published for the 
-        em Paul Mellon Centre for Studies in British Art 
-        | by 
-        em Yale University Press, 
-        | 1997). It transforms this text into a research tool that facilitates multidimensional searching and browsing of the entries in Ingamells’ Dictionary; the organization of this information into structured and usable data; and the analysis and visualization of this data.
+      h3 The Grand Tour Explorer is a dynamic and interactive resource for the exploration of eighteenth-century British travel to Italy. At its core is the digital transformation of the 5232 entries in 
+        em A Dictionary of British and Irish Travelers in Italy 1701-1800 
+        | (compiled by John Ingamells from the Brinsley Ford Archives at the Paul Mellon Center in London, YUP 1997). The dictionary's alphabetized print form is recast into a multidimensional digital database about the lives and journeys of more than 6000 travelers. As a research tool, the Grand Tour Explorer facilitates searching and browsing this mass of information; it organizes this information into structured and usable data; and it enables the analysis and visualization of this data.
 
 
-      p.text-serif The tool is still under construction; private beta version currently being tested with the support of Malcolm Baker, John Brewer, Melissa Calaresu, Jeffrey Collins, Paul Davis, Christopher Johns, Simon Macdonald, Carole Paul, Sophus Reinert, Catherine Sama, Rosemary Sweet.
+      p.text-serif This is an open access digital resource: you can explore freely, save the results of your explorations, and download the data for your further research. Learn more about the 
+        span.hover-item history 
+        | of this project and about the 
+        span.hover-item rationale 
+        | and uses both of the Grand Tour Explorer and of the 
+        span.hover-item database 
+        | at its core; 
+        span.hover-item read essays 
+        | by leading scholars using this tool to exemplify its research uses; and see how to involve it in your 
+        span.hover-item teaching
+        | .
 
-
-
-      p.text-serif For information about the project, please contact Giovanna Ceserani at 
-        a(href="mailto:ceserani@stanford.edu") ceserani@stanford.edu
+      p.text-serif The Grand Tour Explorer was made possible by the intellectual generosity of the Paul Mellon Center in London, and by generous funding from the Roberta Denning Fund for Humanities and Technologies at Stanford, the Stanford Dean of Research Office, the Stanford Dean of Humanities and Science Office, and the Center for Spatial and Textual Analysis (CESTA) at Stanford University. Many people contributed: Celena Allen, Teresa Ceserani, Nicole Coleman, Thea de Armond, Kevin Garcia, Ryan Heuser, Rachel Midura, Justin Muchnick, Clara Romani, Christopher Rovee, Matthew Tan. Read more about their individual contributions at 
+        a(href="https://grandtour.stanford.edu/people/our-team") https://grandtour.stanford.edu/people/our-team.
