--- a/public/about/about.pug
+++ b/public/about/about.pug
@@ -1,7 +1,7 @@
 .container.main-view
   h1 Terms of Use
 
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") Copyright
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") Copyright
     .text-serif(style="text-align: left; color: black;")
       p Copyright to this website is held by Stanford University for all its contents with the exception of:
       p illustrations and maps credited to third party sources,
@@ -12,7 +12,7 @@
       p DOI: XX.XXXX/XXXXXX
       p OCLC: XXXXXXXXXX
 
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") Suggested Citation
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") Suggested Citation
     .text-serif(style="text-align: left; color: black;")
       p ‘The Grand Tour Explorer,’ created by Giovanna Ceserani and Giorgio Caviglia, Part 3 of Giovanna Ceserani, 
         i A World Made by Travel
@@ -20,13 +20,13 @@
         a(href="https://www.worldmadebytravel.org/thegrandtourexplorer") https://www.worldmadebytravel.org/thegrandtourexplorer
         | , published by Center for Spatial and Textual Analysis (CESTA), Stanford 2019.
 
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") Creative Commons License
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") Creative Commons License
     .text-serif(style="text-align: left; color: black;")
       p The website's content, including text, user interface design, style, and imagery—unless otherwise indicated—are licensed under the creative Commons License CC BY-NC-ND 4.0. For more information and the complete text of the license please go to XXXXXX.
       p Reproduction of material under license CC BY-NC-ND 4.0 must meet the following requirements:
       p XXXXXX
 
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") By - Include the Following Attribution:
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") By - Include the Following Attribution:
     .text-serif(style="text-align: left; color: black;")
       p Reprinted from The Grand Tour Explorer, created by Giovanna Ceserani and Giorgio Caviglia, Part 3 of Giovanna Ceserani, 
         i A World Made by Travel
@@ -35,33 +35,33 @@
         | , published by Center for Spatial and Textual Analysis (CESTA) 0 Stanford 2019. All rights reserved. Licensed under the Creative Commons License CC BY-NC-ND 4.0, 
         a(href="https://creativecommons.org/licenses/by-nc-nd/4.0/") https://creativecommons.org/licenses/by-nc-nd/4.0/
 
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") NC - Non-commercial Purpose or Use:
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") NC - Non-commercial Purpose or Use:
     .text-serif(style="text-align: left; color: black;")
       p The content or any portion of this website cannot be sold, redistributed, linked, and/or licensed for money, used for promotional purpose, and/or included in works available for sale or licensing, even by non-profit entities.
 
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") ND - No-derivative:
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") ND - No-derivative:
     .text-serif(style="text-align: left; color: black;")      
       p If you remix, transform, or build upon the material, you may not distribute the modified material.
   
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") Permission
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") Permission
     .text-serif(style="text-align: left; color: black;")      
       p Third party material: Permission to use third party illustrations and/or maps included in this website should be requested directly from their respective sources.
       p Commercial and/or derivative use: Please contact Stanford University Press if you have any questions regarding the reproduction of material included in this website and/or for all requests that don't meet the Creative Commons License CC BY-NC-ND 4.0 requirements.
 
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") Links
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") Links
     .text-serif(style="text-align: left; color: black;")      
       p Links from this website are provided for information and convenience only and we assume no responsibility or liability for the availability or content of any linked third party website. We do not endorse any linked website.
   
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") Platform
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") Platform
     .text-serif(style="text-align: left; color: black;")
       p '
         i The Grand Tour Explorer
         | ' is a custom web application built using Angular JS, Python, D3 at CESTA.
 
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") Warranties
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") Warranties
     .text-serif(style="text-align: left; color: black;")
       p We make no representation of any kind regarding the website content or any portion thereof. The website's content is provided in "AS IS" condition, and we expressly disclaim any and all warranties of merchantability or fitness for any particular use.
 
-  h2.text-serif(style="font-size: 28px; text-align: center; color: #d6bc73;") Feedback
+  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") Feedback
       .text-serif(style="text-align: left; color: black;")
         p Please send any questions or comments to CESTA.
