--- a/public/about/about.pug
+++ b/public/about/about.pug
@@ -26,7 +26,7 @@
       p Reproduction of material under license CC BY-NC-ND 4.0 must meet the following requirements:
       p XXXXXX
 
-  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") By - Include the Following Attribution:
+  h2.text-serif(style="font-size: 18px; text-align: left; color: #b69c53;") By - Include the Following Attribution:
     .text-serif(style="text-align: left; color: black;")
       p Reprinted from The Grand Tour Explorer, created by Giovanna Ceserani and Giorgio Caviglia, Part 3 of Giovanna Ceserani, 
         i A World Made by Travel
@@ -35,11 +35,11 @@
         | , published by Center for Spatial and Textual Analysis (CESTA) 0 Stanford 2019. All rights reserved. Licensed under the Creative Commons License CC BY-NC-ND 4.0, 
         a(href="https://creativecommons.org/licenses/by-nc-nd/4.0/") https://creativecommons.org/licenses/by-nc-nd/4.0/
 
-  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") NC - Non-commercial Purpose or Use:
+  h2.text-serif(style="font-size: 18px; text-align: left; color: #b69c53;") NC - Non-commercial Purpose or Use:
     .text-serif(style="text-align: left; color: black;")
       p The content or any portion of this website cannot be sold, redistributed, linked, and/or licensed for money, used for promotional purpose, and/or included in works available for sale or licensing, even by non-profit entities.
 
-  h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") ND - No-derivative:
+  h2.text-serif(style="font-size: 18px; text-align: left; color: #b69c53;") ND - No-derivative:
     .text-serif(style="text-align: left; color: black;")      
       p If you remix, transform, or build upon the material, you may not distribute the modified material.
   
