--- a/public/about/about.pug
+++ b/public/about/about.pug
@@ -56,7 +56,8 @@
     .text-serif(style="text-align: left; color: black;")
       p '
         i The Grand Tour Explorer
-        | ' is a custom web application built using Angular JS, Python, D3 at CESTA.
+        | ' is a custom web application built using Angular JS, D3, Mapbox, and Python at CESTA. Code is available at 
+        a(href="https://github.com/cestastanford/grandtour") https://github.com/cestastanford/grandtour.
 
   h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") Warranties
     .text-serif(style="text-align: left; color: black;")
