added a comma before the name of ryan tan

--- a/public/main/main.pug
+++ b/public/main/main.pug
@@ -12,7 +12,7 @@
   .row
     .col-lg-12
 
-      p.text-serif A digital tool created and developed by Giovanna Ceserani and Giorgio Caviglia at CESTA (the Center for Spatial and Textual Analysis at Stanford University), with development contributions by Cody Leff, Ashwin Ramaswami and Ryan Tan.
+      p.text-serif A digital tool created and developed by Giovanna Ceserani and Giorgio Caviglia at CESTA (the Center for Spatial and Textual Analysis at Stanford University), with development contributions by Cody Leff, Ashwin Ramaswami, and Ryan Tan.
       
       h3 The Grand Tour Explorer is a dynamic and interactive resource for the exploration of eighteenth-century British travel to Italy. At its core is the digital transformation of the 5232 entries in 
         em A Dictionary of British and Irish Travelers in Italy 1701-1800 
