--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -291,10 +291,11 @@
               .panel-heading Sources
               ul.list-group
                 li.list-group-item(ng-repeat="e in entry.sources") 
-                  a(ng-click="search({sources: e.abbrev})",
-                    ng-bind-html="highlighted('sources', e.abbrev)"
-                  )
-                  a.mentioned-names-popup(ng-style="{'color': 'black'}")
+                  span(ng-bind-html="highlighted('sources', e.abbrev)")
+                  a.mentioned-names-logo(ng-click="search({sources: e.abbrev})")
+                    img(src=require('../mentioned_names.png') width="20" height="20")
+                    
+                  a.mentioned-names-popup(ng-style="{'color': 'black', 'padding-top': '10px'}")
                       p {{ e.full }}
           
           .col-lg-12.col-md-4.col-sm-6
