front page typos and colors fixes

--- a/public/main/main.pug
+++ b/public/main/main.pug
@@ -2,7 +2,7 @@
   .header
     .container
       h1 Grand Tour Explorer 
-        .small(style="display: inline; font-size: 24px; color: #bbb") Created by Giovanna Ceserani and Giorgio Caviglia
+        .small(style="display: inline; font-size: 24px; color: #d6bc73") Created by Giovanna Ceserani and Giorgio Caviglia
         .small Explore the journeys and the lives of British and Irish travelers to eighteenth-century Italy
       button.btn.btn-lg.btn-lavender(ui-sref="search") Start exploring 
        i.fa.fa-angle-right
@@ -19,7 +19,7 @@
         | (compiled by John Ingamells from the Brinsley Ford Archives at the Paul Mellon Center in London, YUP 1997). The dictionary's alphabetized print form is recast into a multidimensional digital database about the lives and journeys of more than 6000 travelers. As a research tool, the Grand Tour Explorer facilitates searching and browsing this mass of information; it organizes this information into structured and usable data; and it enables the analysis and visualization of this data.
 
 
-      p.text-serif This is an open access digital resource: you can explore freely, save the results of your explorations, and download the data for your further research. Learn more about the 
+      h3 This is an open access digital resource: you can explore freely, save the results of your explorations, and download the data for your further research. Learn more about the 
         span.hover-item history 
         | of this project and about the 
         span.hover-item rationale 
@@ -31,5 +31,5 @@
         span.hover-item teaching
         | .
 
-      p.text-serif The Grand Tour Explorer was made possible by the intellectual generosity of the Paul Mellon Center in London, and by generous funding from the Roberta Denning Fund for Humanities and Technologies at Stanford, the Stanford Dean of Research Office, the Stanford Dean of Humanities and Science Office, and the Center for Spatial and Textual Analysis (CESTA) at Stanford University. Many people contributed: Celena Allen, Teresa Ceserani, Nicole Coleman, Thea de Armond, Kevin Garcia, Ryan Heuser, Rachel Midura, Justin Muchnick, Clara Romani, Christopher Rovee, Matthew Tan. Read more about their individual contributions at 
-        a(href="https://grandtour.stanford.edu/people/our-team") https://grandtour.stanford.edu/people/our-team.
+      //p.text-serif The Grand Tour Explorer was made possible by the intellectual generosity of the Paul Mellon Center in London, and by generous funding from the Roberta Denning Fund for Humanities and Technologies at Stanford, the Stanford Dean of Research Office, the Stanford Dean of Humanities and Science Office, and the Center for Spatial and Textual Analysis (CESTA) at Stanford University. Many people contributed: Celena Allen, Teresa Ceserani, Nicole Coleman, Thea de Armond, Kevin Garcia, Ryan Heuser, Rachel Midura, Justin Muchnick, Clara Romani, Christopher Rovee, Matthew Tan. Read more about their individual contributions at 
+      //  a(href="https://grandtour.stanford.edu/people/our-team") https://grandtour.stanford.edu/people/our-team.
