--- a/public/mapbox/mapbox.css
+++ b/public/mapbox/mapbox.css
@@ -76,7 +76,11 @@
   }
 
   #selected {
-    max-height: 100px;
+    max-height: 250px;
+  }
+
+  #selected .mini-table {
+    max-height: initial;
   }
 
   #unselected {
