--- a/public/index.pug
+++ b/public/index.pug
@@ -37,7 +37,12 @@ html(lang="en")
             li(ng-if="currentUser")
                 a(ui-sref="lists") Saved Lists
             li
-              a(href="Grand Tour Explorer Data.zip" download) Downloads
+              div.index-dropdown-wrapper
+                div.index-dropdown
+                  a(id="dropper") Downloads
+                  div.index-dropdown-content
+                    a(href="GTE Bibliography.txt" download) Bibliography
+                    a(href="GTE Coordinates.txt" download) Coordinates
             li
               a {{currentUser.fullName || currentUser.username}}
             a.btn.btn-default.btn-sm.navbar-btn.navbar-right(type="button", ng-click="logout()")
