--- a/public/index.pug
+++ b/public/index.pug
@@ -39,7 +39,7 @@ html(lang="en")
             li
               div.index-dropdown-wrapper
                 div.index-dropdown
-                  a(id="dropper") Downloads
+                  a Downloads
                   div.index-dropdown-content
                     a(href="GTE Bibliography.txt" download) Bibliography
                     a(href="GTE Coordinates.txt" download) Coordinates
