--- a/public/index.pug
+++ b/public/index.pug
@@ -14,41 +14,44 @@ html(lang="en")
   body
     
     
-    div.site
-      nav.navbar.navbar-default
-        .container
-          .navbar-header
-            a.navbar-brand(href="#/") The Grand Tour Explorer
-          .navbar-collapse
-            ul.nav.navbar-nav
-              li
-                a(ui-sref="search") Search
-              li
-                a(ui-sref="explore") Explore 
-              li
-                a(ui-sref="visualizations") Visualize
-                                
-            ul.nav.navbar-nav.navbar-right(ng-show="currentUser")
-              
-              li(ng-show="currentUser.role=='admin'")
-                a(ui-sref="admin") Manage
-              li
-                a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
-              li(ng-if="currentUser")
-                  a(ui-sref="lists") Saved Lists
-              li
-                a(href="Grand Tour Explorer Data.zip" download) Downloads
-              li
-                a {{currentUser.fullName || currentUser.username}}
-              a.btn.btn-default.btn-sm.navbar-btn.navbar-right(type="button", ng-click="logout()")
-                //i.fa.fa-sign-out.margin-right
-                | Logout
+  div.site
+    nav.navbar.navbar-default
+      .container
+        .navbar-header
+          a.navbar-brand(href="#/") The Grand Tour Explorer
+        .navbar-collapse
+          ul.nav.navbar-nav
+            li
+              a(ui-sref="search") Search
+            li
+              a(ui-sref="explore") Explore 
+            li
+              a(ui-sref="visualizations") Visualize
+                              
+          ul.nav.navbar-nav.navbar-right(ng-show="currentUser")
+            
+            li(ng-show="currentUser.role=='admin'")
+              a(ui-sref="admin") Manage
+            li
+              a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
+            li(ng-if="currentUser")
+                a(ui-sref="lists") Saved Lists
+            li.index-dropdown-wrapper
+              a Downloads
+              div.index-dropdown-content
+                a(href="GTE Bibliography.txt" download) Bibliography
+                a(href="GTE Coordinates.txt" download) Coordinates
+            li
+              a {{currentUser.fullName || currentUser.username}}
+            a.btn.btn-default.btn-sm.navbar-btn.navbar-right(type="button", ng-click="logout()")
+              //i.fa.fa-sign-out.margin-right
+              | Logout
 
-            ul.nav.navbar-nav.navbar-right(ng-show="!currentUser")
-              li
-                a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
-              li
-                a(ui-sref="login") Login            
+          ul.nav.navbar-nav.navbar-right(ng-show="!currentUser")
+            li
+              a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
+            li
+              a(ui-sref="login") Login            
       div.site-content
         ui-view
       div.site-footer.navbar-default
