--- a/public/index.pug
+++ b/public/index.pug
@@ -51,6 +51,10 @@ html(lang="en")
             li
               a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
             li
+              a(ui-sref="login" target="_blank") Saved Lists
+            li
+              a(ui-sref="login" target="_blank") Downloads
+            li
               a(ui-sref="login") Login            
       div.site-content
         ui-view
