fix: use ui-sref instead of toLogin function

--- a/public/components/entry-list/entry-list.pug
+++ b/public/components/entry-list/entry-list.pug
@@ -9,9 +9,10 @@
       button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown", ng-if="currentUser")
         span {{ isSavedListView ? 'copy' : 'add selected entries to list' }}
         span.caret
-      button.btn.btn-default.btn-xs.dropdown-toggle(type="button", ng-click="toLogin()", ng-if="!currentUser")
-        span {{ isSavedListView ? 'copy' : 'add selected entries to list' }}
-        span.caret
+      a(ui-sref="login", target="_blank", ng-if="!currentUser")
+        button.btn.btn-default.btn-xs.dropdown-toggle(type="button")
+          span {{ isSavedListView ? 'copy' : 'add selected entries to list' }}
+          span.caret
       ul.dropdown-menu
         li.dropdown-header(ng-show="isSavedListView") copy selected entries to list:
         li(ng-show="sharedListModel.listsLoading")
@@ -70,9 +71,10 @@
       button#export-button.btn.btn-default.btn-xs.pull-right(data-loading-text="loading...", ng-click="export()", ng-disabled="!entries.length", ng-if="currentUser")
         i.fa.fa-download.margin-right
         | export results
-      button#export-button.btn.btn-default.btn-xs.pull-right(data-loading-text="loading...", ng-click="toLogin()", ng-disabled="!entries.length", ng-if="!currentUser")
-        i.fa.fa-download.margin-right
-        | export results
+      a(ui-sref="login", target="_blank", ng-if="!currentUser")
+        button#export-button.btn.btn-default.btn-xs.pull-right(data-loading-text="loading...", ng-disabled="!entries.length")
+          i.fa.fa-download.margin-right
+          | export results
 
     div#duplicate-button.btn-group.add-to-list-btn.pull-right(ng-show="isSavedListView")
       button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
