remove signup, require login

--- a/public/login/login.pug
+++ b/public/login/login.pug
@@ -15,7 +15,7 @@
               input.form-control.input-lg(type="password", name="password", ng-model="user.password", placeholder="Password", required)
             .form-group
               button.btn.btn-info.btn-block.btn-lg(type="submit", ng-disabled="!user.username || !user.password") Log in
-          .form-group
-            a(ui-sref="signup")
-              button.btn.btn-block.btn-lg() Sign up
+          //- .form-group
+          //-   a(ui-sref="signup")
+          //-     button.btn.btn-block.btn-lg() Sign up
 
