--- a/public/mapbox/mapbox.css
+++ b/public/mapbox/mapbox.css
@@ -75,17 +75,13 @@
     text-align: center;
   }
 
-  #selected {
+  #search {
     max-height: 250px;
   }
 
-  #selected .mini-table {
-    max-height: initial;
-  }
-
-  #unselected {
-    height: 200px; 
-    min-height: 100px
+  #searchbar {
+    width: 100%;
+    border: none;
   }
 
   /* All selector buttons */
@@ -101,26 +97,25 @@
   .states-box {
     font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
     position: absolute;
-    height: 250px;
-    width: 300px;
+    height: 100px;
+    width: 100%;
     bottom: 0;
     left: 0;
     padding: 10px;
   }
 
   .states-box .states-box-inner {
-    height: 200px;
+    height: 80px;
     background-color: white;
     border: 2px solid #dddddd;
     border-radius: 4px;
     box-shadow:0 1px 2px rgba(0, 0, 0, 0.10);
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
   }
 
   #states {
-    height: inherit;
-    overflow: auto;
+    height: 177px;
   }
 
   .stateColor {
@@ -139,5 +134,6 @@
   }
 
   .stateButton {
-    cursor: pointer;
+    background-color: white;
+    display: inline-block;
   }
