--- a/public/mapbox/mapbox.css
+++ b/public/mapbox/mapbox.css
@@ -92,7 +92,7 @@
     cursor: pointer;
   }
 
-  /* States selector */
+  /* States legend */
 
   .states-box {
     font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -102,20 +102,21 @@
     bottom: 0;
     left: 0;
     padding: 10px;
+    padding-bottom: 25px;
+    margin-bottom: 30px;
   }
 
   .states-box .states-box-inner {
-    height: 80px;
+    height: 90px;
     background-color: white;
     border: 2px solid #dddddd;
     border-radius: 4px;
     box-shadow:0 1px 2px rgba(0, 0, 0, 0.10);
     padding: 10px;
-    margin-bottom: 30px;
   }
 
   #states {
-    height: 177px;
+    height: 140px;
   }
 
   .stateColor {
@@ -129,11 +130,12 @@
 
   .stateName {
     display: inline-block;
-    position: relative;
+    position: static;
     left: 10px;
+    padding-left: 10px;
+    padding-right: 4px;
   }
 
   .stateButton {
-    background-color: white;
     display: inline-block;
   }
